--- a/LivingDesign/View/NewProduct.storyboard
+++ b/LivingDesign/View/NewProduct.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -245,6 +245,14 @@
                                     <constraint firstAttribute="height" constant="84" id="ZRh-1r-qtu"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uN-eD-Cuh" customClass="PickerButton" customModule="PickerButton">
+                                <rect key="frame" x="165" y="488" width="240" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="iPG-Fi-frv"/>
+                                    <constraint firstAttribute="width" constant="240" id="zqa-jl-zvW"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -264,9 +272,11 @@
                             <constraint firstItem="En2-Pu-cBk" firstAttribute="leading" secondItem="Yo2-9s-efF" secondAttribute="leading" constant="40" id="F2u-bx-Ree"/>
                             <constraint firstItem="Gyd-k6-Zzx" firstAttribute="top" secondItem="1ZX-ta-7bT" secondAttribute="bottom" constant="5" id="ISa-MZ-M6c"/>
                             <constraint firstItem="Vzd-8c-ieC" firstAttribute="centerX" secondItem="PEH-wX-4Te" secondAttribute="centerX" id="K2D-7c-6CY"/>
+                            <constraint firstItem="5uN-eD-Cuh" firstAttribute="leading" secondItem="DfY-QQ-qzY" secondAttribute="trailing" id="N4a-If-Ex5"/>
                             <constraint firstItem="so5-Yw-dCm" firstAttribute="top" secondItem="0nR-ra-Pqg" secondAttribute="bottom" constant="5" id="NaQ-cE-8Jc"/>
                             <constraint firstItem="ora-4N-Fxd" firstAttribute="top" secondItem="Vzd-8c-ieC" secondAttribute="bottom" constant="30" id="P8e-yZ-S5P"/>
                             <constraint firstItem="6XD-yh-XmG" firstAttribute="leading" secondItem="Yo2-9s-efF" secondAttribute="leading" constant="40" id="QET-Vy-1ho"/>
+                            <constraint firstItem="5uN-eD-Cuh" firstAttribute="top" secondItem="ora-4N-Fxd" secondAttribute="bottom" constant="5" id="QYa-XH-oEq"/>
                             <constraint firstItem="pnr-0w-yBc" firstAttribute="trailing" secondItem="Yo2-9s-efF" secondAttribute="trailing" id="RDj-Um-dWJ"/>
                             <constraint firstItem="j3o-I6-Nqa" firstAttribute="leading" secondItem="MAk-b2-7cZ" secondAttribute="trailing" id="WFJ-4Q-KCm"/>
                             <constraint firstItem="xhP-Vg-qgb" firstAttribute="leading" secondItem="Yo2-9s-efF" secondAttribute="leading" constant="40" id="WvN-hk-KUw"/>
@@ -293,12 +303,14 @@
                             <constraint firstItem="0nR-ra-Pqg" firstAttribute="leading" secondItem="DlQ-H1-Tsd" secondAttribute="trailing" id="rqC-Jl-B47"/>
                             <constraint firstItem="1ZX-ta-7bT" firstAttribute="top" secondItem="Qz0-Mm-uq4" secondAttribute="bottom" constant="5" id="vcW-qU-h0e"/>
                             <constraint firstItem="GcD-RU-tMA" firstAttribute="top" secondItem="DfY-QQ-qzY" secondAttribute="bottom" constant="5" id="xKi-kj-Ruj"/>
+                            <constraint firstItem="Yo2-9s-efF" firstAttribute="trailing" secondItem="5uN-eD-Cuh" secondAttribute="trailing" constant="9" id="xn3-Kg-tLV"/>
                             <constraint firstItem="g0P-jw-Pm4" firstAttribute="leading" secondItem="6XD-yh-XmG" secondAttribute="trailing" id="zX7-Jb-NJN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Yo2-9s-efF"/>
                     </view>
                     <connections>
                         <outlet property="comfort" destination="Gyd-k6-Zzx" id="bcF-Uk-8Gb"/>
+                        <outlet property="genre" destination="5uN-eD-Cuh" id="chR-Cf-rQU"/>
                         <outlet property="memo" destination="so5-Yw-dCm" id="KCE-oo-JX4"/>
                         <outlet property="modelNumber" destination="bFn-fC-WG9" id="ZYU-2n-RAT"/>
                         <outlet property="name" destination="ora-4N-Fxd" id="L3p-Li-1mM"/>
